# desktop-tools-misc

./: .gitignore  README.md
BallSimulator/: CMakeLists.txt  README.md
BallSimulator/inc/: ball.h  canvas.h  mainwindow.h
BallSimulator/script/: build.bat
BallSimulator/src/: ball.cpp  canvas.cpp  mainwindow.cpp
GoServerDemo/: 说明.txt
GoServerDemo/src/: build.bat  server.go
hello-grpc/client-qt/: CMakeLists.txt
hello-grpc/client-qt/src/svc/: greetSvc.cpp  greetSvc.h
hello-grpc/client-qt/src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
hello-grpc/protos/: hello.proto
hello-grpc/server-rust/: Cargo.toml  build-server-rust.bat  build.rs
hello-grpc/server-rust/src/: client.rs  server.rs
